Fixing the problem with long function names that are one word, it now overflows under the menu like the original php.net design does

--- a/styles/structure.css
+++ b/styles/structure.css
@@ -149,6 +149,7 @@ h1 {
 }
 
 .layout-menu li li a {
+    overflow: hidden;
     border: none;
     font-size: 11px;
     padding: 1px 0 1px 20px;
